--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.14",
-    "astro": "^5.5.3",
-    "tailwindcss": "^4.0.14"
+    "astro": "^5.5.3"
   }
 }
